# rust-ai-trading-bot

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/ml/: Cargo.toml
crates/ml/src/: lib.rs
crates/utils/: Cargo.toml
data/: market_signals.csv
docs/: ml_pipeline.mmd
examples/: ai_trading_bot.rs
